# HTML-to-PDF

./: .claude_settings.json  .gitignore  CLAUDE.md  COMPETITOR_ANALYSIS.md  DEPLOY.md  Dockerfile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
.claude/: settings.local.json
.claude/commands/: deploy.md
.github/workflows/: build-and-push.yml  test.yml
backend/: celery_app.py  config.py  conftest.py  main.py  pdf_postprocess.py  pdf_service.py  pytest.ini  rate_limiter.py  redis_client.py  requirements-dev.txt  requirements.txt  stripe_service.py  supabase_client.py  tasks.py  webhook_service.py
backend/tests/: test_api.py  test_api_v1.py  test_auth.py  test_error_scenarios.py  test_pdf_service.py  test_rate_limiting.py  test_sanitization.py  test_validation.py  test_webhooks.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
frontend/e2e/: conversion.spec.ts  settings.spec.ts  theme.spec.ts
frontend/public/: manifest.json  privacy.html  robots.txt  sitemap.xml  terms.html
frontend/src/: App.tsx  i18n.ts  index.css
frontend/src/components/: LanguageSelector.tsx  Layout.tsx  SEO.tsx
frontend/src/components/Auth/: AuthModal.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/pages/: Dashboard.tsx  Editor.tsx  Home.tsx  HtmlToPdf.tsx  Pricing.tsx  TailwindToPdf.tsx  TailwindToPdfGuide.tsx
sdks/php/: README.md  composer.json
sdks/php/src/: PDFLeaf.php  PDFLeafException.php  PDFOptions.php
sdks/python/: README.md  pyproject.toml
sdks/python/pdfleaf/: __init__.py  client.py  exceptions.py  types.py
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/src/: index.ts  types.ts
supabase/: config.toml
supabase/migrations/: 20260109154403_initial_schema.sql  20260109200000_add_role_column.sql  20260110000000_create_plans_table.sql  20260110000001_add_rate_limits.sql  20260110000002_add_webhooks.sql
(+16 files in other folders)
