[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfleaf"
version = "1.0.0"
description = "Official PDF Leaf SDK for Python - Convert HTML to PDF with native TailwindCSS support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PDF Leaf", email = "support@pdfleaf.com"}
]
maintainers = [
    {name = "Rodrigo Normandia", email = "contato@buscarid.com"}
]
keywords = [
    "pdf",
    "html-to-pdf",
    "html2pdf",
    "pdf-generator",
    "tailwindcss",
    "weasyprint",
    "api",
    "sdk"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed"
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://htmltopdf.buscarid.com"
Documentation = "https://htmltopdf.buscarid.com/api/docs"
Repository = "https://github.com/EngenhariaBucarId/HTML-to-PDF-Antigravity"
Issues = "https://github.com/EngenhariaBucarId/HTML-to-PDF-Antigravity/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdfleaf*"]

[tool.mypy]
python_version = "3.8"
strict = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
